# CHATCIELO

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  demo_inference.py  pyproject.toml  requirements.txt  submission.csv
config/: config.yaml
scripts/: create_pr.sh  lgpd_audit.py  validate_dataset.py
src/: __init__.py
src/api/: main.py  middleware.py
src/api/routes/: __init__.py  feedback.py  health.py  preference.py
src/api/schemas/: __init__.py  requests.py  responses.py
src/config/: settings.py
src/data/: __init__.py  dataset.py  preprocessing.py
src/evaluation/: __init__.py  evaluate.py  metrics.py
src/features/: __init__.py  feature_engineering.py
src/inference/: __init__.py  infer.py  predictor.py
src/models/: __init__.py  preference_model.py
src/training/: __init__.py  losses.py  train.py  trainer.py
tests/: conftest.py
tests/benchmarks/: test_inference_latency.py
tests/integration/: test_pipeline.py
tests/ml/: test_model_properties.py
tests/security/: test_lgpd_compliance.py
tests/unit/: test_api_schemas.py  test_dataset.py  test_demo_inference.py  test_feature_engineering.py  test_losses.py  test_metrics.py  test_predictor.py  test_preference_model.py  test_preprocessing.py  test_train.py  test_trainer.py
