[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "chatcielo"
version = "0.1.0"
description = "Pairwise Preference Ranking system for Cielo Brasil — LMSYS-based LLM response selection"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Proprietary" }

# ── Ruff (linter) ─────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "T20", # flake8-print (no stray prints in src/)
    "RUF", # Ruff-specific rules
]
ignore = [
    "S101",  # allow assert in tests
    "S105",  # allow hardcoded passwords in .env.example only
    "B008",  # FastAPI Depends() patterns
    "T201",  # allow print() in CLI scripts
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20"]
"scripts/**" = ["T20"]
"src/training/train.py" = ["T20"]
"src/inference/infer.py" = ["T20"]
"src/evaluation/evaluate.py" = ["T20"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Black (formatter) ─────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

# ── Mypy (type checker) ───────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["src"]

# Third-party stubs that don't ship inline types
[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "sklearn.*",
    "scipy.*",
    "pandas.*",
    "numpy.*",
    "redis.*",
    "prometheus_client.*",
    "structlog.*",
    "hypothesis.*",
    "sentence_transformers.*",
    "faiss.*",
    "accelerate.*",
    "peft.*",
]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "-ra",                    # show extra summary for all except passed
]
markers = [
    "unit: fast, no I/O, no model loading",
    "integration: requires dataset + model mocks",
    "ml: property-based tests with hypothesis",
    "security: LGPD / PII compliance tests",
    "benchmark: latency tests (run with --benchmark-only)",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:transformers",
    "ignore::UserWarning:torch",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = [
    "src/training/train.py",   # CLI entry points — covered by integration
    "src/inference/infer.py",
    "src/evaluation/evaluate.py",
]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@overload",
]
